# learn-opencv

./: README.md  pyproject.toml  start.py  todo.md
notebooks/Chapter01/: 01.00-A-Taste-of-Machine-Learning.ipynb
notebooks/Chapter02/: 02.01-Dealing-with-Data-Using-Python-NumPy.ipynb  02.02-Loading-External-Datasets-in-Python.ipynb  02.03-Visualizing-Data-Using-Matplotlib.ipynb  02.04-Visualizing-Data-from-an-External-Dataset.ipynb
src/dahua/: ImageConvert.py  MVSDK.py  Readme_Ch.txt  Readme_En.txt
src/dahua/IMV/ChunkData/: ChunkData.py
src/dahua/IMV/Grab/: Grab.py
src/dahua/IMV/GrabCallback/: GrabCllback.py
src/dahua/IMV/ImageConvert/: ImageConvert.py
src/dahua/IMV/ImageFlip/: ImageFlip.py
src/dahua/IMV/ImageRotate/: ImageRotate.py
src/dahua/IMV/opencv_byCallBack/: Demo_opencv_byCallBack.py
src/dahua/IMV/opencv_byGetFrame/: Demo_opencv_byGetFrame.py
src/dahua/IMVFG/Grab/: Grab.py
src/dahua/IMVFG/GrabCallback/: GrabCallback.py
src/dahua/IMVFG/ImageConvert/: ImageConvert.py
src/dahua/IMVFG/ImageFlip/: ImageFlip.py
src/dahua/IMVFG/ImageRotate/: ImageRotate.py
src/dahua/IMVFG/LoadAndSaveDeviceCfg/: LoadAndSaveDeviceCfg.py
src/dahua/IMVFG/MVSDK/: IMVFGApi.py  IMVFGDefines.py
src/dahua/IMVFG/SaveImageToBmp/: SaveImageToBmp.py
src/dahua/IMVFG/SoftTrigger/: SoftTrigger.py
src/dahua/dll/CLProtocol/: SchemaVersion.1.1@DahuaTechnology#L5083#L5083MK100-4.1.0.1@XMLVersion.1.0.1.xml  SchemaVersion.1.1@DahuaTechnology#L5083#MV-L5083MK100-2.1.0.0@XMLVersion.1.0.0.xml  SchemaVersion.1.1@DahuaTechnology#L5083#MV-L5083MK100-2.1.0.1@XMLVersion.1.0.1.xml  (+5 more)
src/myopencv/: contour.py  dahua.py  main.py
(+5 files in other folders)
