[project]
name = "myopencv"
version = "0.1.0"
description = "just for try pdm"
authors = [
    {name = "mingxing", email = "1308646+zhangmx@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
