[project]
name = "myopencv"
version = "0.1.0"
description = "just for try pdm"
authors = [
    {name = "mingxing", email = "1308646+zhangmx@users.noreply.github.com"},
]
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.4",
    "opencv-contrib-python>=4.10.0.84",
    "scipy>=1.13.1",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.2",
    "theano>=1.0.5",
    "keras>=3.3.3",
    "graphviz>=0.20.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "python start.py"
